# py_sockets

./: CMakeLists.txt  README.md  package.xml
src/: GUI_server.py  decode_message.py  prova.txt  ros_server.py  sim_client.py  sim_server.py
src/docs/: Makefile
src/docs/html sphinx/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/docs/html sphinx/_sources/: code.txt  index.txt
src/docs/source/: conf.py
